# zaychess-engine

./: .gitignore  README.md  evaluate.py  play_ttt.py  pyproject.toml  train.py  train_ttt.py  training_utils.py  uci_engine.py  zaytrain.sh
alpha_chess/: __init__.py  config.py  dataset.py  logger_config.py  mcts.py  model.py  self_play.py  uci_engine.py  utils.py
alpha_zero/: __init__.py  chess_wrapper.py  config.py  dataset.py  game_adapter.py  logger_config.py  mcts.py  model.py  self_play.py  tictactoe.py  utils.py
engine/: dataset.py  debug_utils.py  logger_config.py  mcts.py  model.py  train.py  uci_engine.py  utils.py
notebooks/: alphazero_script.py
tests/: test_chess_wrapper.py  test_dataset.py  test_mcts.py  test_temperature.py  test_tictactoe.py  test_uci_engine.py  test_utils.py
