[project]
name = "zaychess-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerenemy",email = "jzay@wesleyan.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "chess (>=1.11.2,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "psutil (>=7.2.1,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
